# mcp_kandinsky

./: .gitignore  README.md  pyproject.toml
mcp_kandinsky/: __main__.py  kandinsky_api.py  server.py
