[project]
name = "mcp_kandinsky"
version = "0.2.0"
description = "MCP сервер для генерации изображений через Kandinsky API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Sergei Trashchenkov", email = "trashchenkov@gmail.com" }
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "numpy>=1.26.0"
]

[project.scripts]
mcp-kandinsky = "mcp_kandinsky.server:run"

[project.urls]
Homepage = "https://github.com/ai-forever/mcp_kandinsky"
Repository = "https://github.com/ai-forever/mcp_kandinsky"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_kandinsky"] 